[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sounds/404329__inspectorj__toilet-flush-european-distant-lid-up.wav" type="AudioStream" id=1]
[ext_resource path="res://graphic_minigame/background.PNG" type="Texture" id=2]
[ext_resource path="res://graphic_minigame/background_houses_orig.PNG" type="Texture" id=3]
[ext_resource path="res://graphic_minigame/background_digester.PNG" type="Texture" id=4]
[ext_resource path="res://graphic_minigame/background_treatmentplant.PNG" type="Texture" id=5]
[ext_resource path="res://graphic_minigame/background_chamber.PNG" type="Texture" id=6]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=7]
[ext_resource path="res://scripts/Level_Biogas.gd" type="Script" id=8]
[ext_resource path="res://scripts/EnemySpawner.gd" type="Script" id=9]
[ext_resource path="res://graphic_minigame/background_houses_shade.png" type="Texture" id=10]
[ext_resource path="res://graphic_minigame/background_treatmentplant_shade.png" type="Texture" id=11]
[ext_resource path="res://Shake.tres" type="Animation" id=12]
[ext_resource path="res://graphic_minigame/UI_Square.png" type="Texture" id=13]
[ext_resource path="res://YouWin.tscn" type="PackedScene" id=14]
[ext_resource path="res://YouLose.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1584.16, 1003.28 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 228.676, 201.792 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 531.003, 704.348 )

[node name="Level_Biogas" type="Node2D"]
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="background" type="Sprite" parent="."]
position = Vector2( -1.16638, 0 )
scale = Vector2( 0.935, 0.700584 )
texture = ExtResource( 2 )
centered = false

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 960, 540 )
shape = SubResource( 1 )

[node name="foreground" type="Node2D" parent="."]
position = Vector2( -51.1211, 3.52201 )

[node name="background_houses" type="Sprite" parent="foreground"]
light_mask = 2
position = Vector2( 429.012, 672.595 )
scale = Vector2( 1.2443, 1.13617 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="foreground/background_houses"]
stream = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="foreground/background_houses"]
visible = false
position = Vector2( 1.72974, -9.30841 )
texture = ExtResource( 10 )

[node name="Position_House" type="Position2D" parent="foreground/background_houses"]

[node name="Area_House" type="Area2D" parent="foreground/background_houses"]

[node name="House" type="CollisionShape2D" parent="foreground/background_houses/Area_House"]
shape = SubResource( 2 )

[node name="TextureProgress" type="TextureProgress" parent="foreground/background_houses"]
margin_left = -285.0
margin_top = 278.0
margin_right = 254.0
margin_bottom = 340.0
max_value = 10.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 13 )
tint_under = Color( 0.305882, 0.305882, 0.305882, 1 )
tint_progress = Color( 0.290196, 0.909804, 1, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_treatmentplant" type="Sprite" parent="foreground"]
position = Vector2( 894, 767 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="foreground/background_treatmentplant"]
visible = false
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="foreground/background_treatmentplant"]
anims/Shake = ExtResource( 12 )
anims/shake = ExtResource( 12 )

[node name="Position_WTP" type="Position2D" parent="foreground/background_treatmentplant"]

[node name="Area_WTP" type="Area2D" parent="foreground/background_treatmentplant"]

[node name="WTP" type="CollisionShape2D" parent="foreground/background_treatmentplant/Area_WTP"]
position = Vector2( 104.69, -64.98 )
shape = SubResource( 3 )

[node name="background_chamber" type="Sprite" parent="foreground"]
position = Vector2( 1599.02, 734.623 )
scale = Vector2( 0.332123, 0.4 )
texture = ExtResource( 6 )

[node name="Position_chamber" type="Position2D" parent="foreground/background_chamber"]
position = Vector2( -380.803, -150.735 )

[node name="TextureProgress2" type="TextureProgress" parent="foreground/background_chamber"]
margin_left = -2368.0
margin_top = 628.0
margin_right = 752.0
margin_bottom = 809.0
max_value = 10.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 13 )
tint_under = Color( 0.305882, 0.305882, 0.305882, 1 )
tint_progress = Color( 0.827451, 1, 0.290196, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="foreground/background_chamber"]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="foreground/background_chamber/StaticBody2D"]
position = Vector2( 156.827, -573.966 )
polygon = PoolVector2Array( 56.9697, -17.808, 160.014, 5.59875, 290.343, 60.8937, 404.5, 142.944, 476.185, 211.24, 529.313, 297.232, 568.556, 386.899, 582.896, 471.143, 585.124, 1147.43, -788.076, 1144.13, -781.035, 523.549, -765.19, 408.016, -735.261, 324.391, -701.812, 248.469, -617.307, 160.443, -538.083, 92.2241, -427.171, 31.7064, -242.317, -21.109, -55.7031, -33.2125, -2.94287, -13.1478, -139.077, -2.11841, -310.505, 29.3942, -466.808, 90.8436, -580.253, 188.533, -716.387, 371.306, -755.882, 1116.2, 531.856, 1123.18, 540.236, 468.489, 487.162, 281.683, 341.907, 126.303, 207.826, 51.2313, 75.2085, 2.6084 )

[node name="background_digester" type="Sprite" parent="foreground"]
position = Vector2( 1219.81, 769.23 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Position_digester" type="Node2D" parent="foreground/background_digester"]
position = Vector2( 81.2256, 538.494 )
script = ExtResource( 9 )

[node name="YouWin" parent="." instance=ExtResource( 14 )]
visible = false

[node name="YouLose" parent="." instance=ExtResource( 15 )]
visible = false
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="foreground/background_houses/Area_House" to="." method="_on_Area_House_input_event"]
[connection signal="mouse_exited" from="foreground/background_houses/Area_House" to="." method="_on_Area_House_mouse_exited"]
[connection signal="input_event" from="foreground/background_treatmentplant/Area_WTP" to="." method="_on_Area_WTP_input_event"]
[connection signal="mouse_exited" from="foreground/background_treatmentplant/Area_WTP" to="." method="_on_Area_WTP_mouse_exited"]
[connection signal="value_changed" from="foreground/background_chamber/TextureProgress2" to="." method="_on_TextureProgress2_value_changed"]
